--- a/src/sass/libs/_normalize.sass
+++ b/src/sass/libs/_normalize.sass
@@ -1,8 +1,9 @@
 html 
 	line-height: 1.15 
-	-webkit-text-size-adjust: 100% 
+	-webkit-text-size-adjust: 100%
 body 
-	margin: 0 
+	margin: 0
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 main 
 	display: block 
 h1 
