Add App element and Sidebar html and css

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,8 @@
 @import 'libs/normalize'
 @import 'mixins'
 @import 'components/Wrapper'
+@import 'components/App'
+@import 'components/Sidebar'
 
 body
 	background: #111111
