--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,7 @@
 @import 'libs/normalize'
 @import 'mixins'
 @import 'components/Wrapper'
+@import 'components/Header'
 @import 'components/App'
 @import 'components/Sidebar'
 
