Add Content component

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -4,6 +4,7 @@
 @import 'components/Header'
 @import 'components/App'
 @import 'components/Sidebar'
+@import 'components/Content'
 
 body
 	background: #111111
