Style links and add resources

--- a/src/sass/libs/_normalize.sass
+++ b/src/sass/libs/_normalize.sass
@@ -18,6 +18,9 @@ pre
 	font-size: 1em 
 a 
 	background-color: transparent 
+	color: #3391ff
+a:visited
+	color: darken(#3391ff, 24%)
 abbr[title] 
 	border-bottom: none 
 	text-decoration: underline 
