Always show vertical scrollbar, cursor default on sidebar item hover

--- a/src/sass/components/_Sidebar.sass
+++ b/src/sass/components/_Sidebar.sass
@@ -14,6 +14,7 @@
 		padding: 8px
 		&:hover
 			background: #222222
+			cursor: default
 		&:active, &--active
 			background: #222222
 			border-right: 4px solid #FFFFFF
